# sollya

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Manuel_fr.tex  NEWS  README  arenaireplot.h  arenairetoolsexample.c  assignment.c  assignment.h  autodiff.c  autodiff.h  autogen.sh  bitfields.c  bitfields.h  chain.c  chain.h  chebModels.c  chebModels.h  chebModelsAux.c  chebModelsAux.h  chebyshevform.c  chebyshevform.h  chebyshevformaux.c  chebyshevformaux.h  compile.sh  configure.ac  double.c  double.h  execute.c  execute.h  expansion.c  expansion.h  expression.c  expression.h  external.c  external.h  externalfun.c  externalproc.c  (+74 more)
doc/: CommandsAndFunctions.tex  D.shlp  D.tex  DD.tex  DE.shlp  DE.tex  Makefile.am  RD.tex  RN.shlp  RN.tex  RU.shlp  RU.tex  RZ.tex  SG.tex  TD.shlp  TD.tex  abs.shlp  abs.tex  absolute.shlp  absolute.tex  accurateinfnorm.shlp  accurateinfnorm.tex  acos.shlp  acos.tex  acosh.shlp  acosh.tex  and.shlp  and.tex  append.shlp  append.tex  approx.shlp  approx.tex  asciiplot.shlp  asciiplot.tex  asin.shlp  asin.tex  asinh.shlp  asinh.tex  atan.shlp  atan.tex  (+495 more)
doc/www/: ListOfCommands.php  abs.php  absolute.php  accurateinfnorm.php  acos.php  acosh.php  and.php  append.php  approx.php  asciiplot.php  asin.php  asinh.php  atan.php  atanh.php  autodiff.php  autosimplify.php  bashevaluate.php  bashexecute.php  binary.php  bind.php  boolean.php  canonical.php  ceil.php  chebyshevform.php  checkinfnorm.php  coeff.php  composepolynomials.php  concat.php  constant.php  cos.php  cosh.php  d.php  dd.php  de.php  decimal.php  default.php  degree.php  denominator.php  diam.php  dieonerrormode.php  (+219 more)
tests/: Makefile.am  check.proto  check.sollya  check.sollya.output  check001.sollya  check001.sollya.reference  check009.sollya.reference  check011.sollya  check012.sollya  check012.sollya.reference  check013.sollya  check013.sollya.reference  check015.sollya  check015.sollya.reference  check016.sollya  check016.sollya.reference  check018.sollya  check018.sollya.reference  check019.sollya  check019.sollya.reference  check020.sollya  check020.sollya.reference  checkSupnorm.sollya  checkTMandAD.sollya  memoryleaks.sollya  timecheck.sollya  timecheck.sollya.output  timecheck.sollya.reference
tests-lib/: Makefile.am  check.proto  libraryexample.c  tand.c  tappend.c  tappend.reference  tassign_in_structure.c  tbuild_function_libraryconstant.c  tbuild_function_libraryconstant.reference  tbuild_function_libraryfunction.c  tbuild_function_libraryfunction.reference  tbuild_function_procedurefunction.c  tbuild_function_procedurefunction.reference  tcheckinfnorm.c  tcheckinfnorm.reference  tcmp_equal.c  tcmp_greater.c  tcmp_greater_equal.c  tcmp_in.c  tcmp_less.c  tcmp_less_equal.c  tcmp_not_equal.c  tconcat.c  tconstant.c  tconstant.reference  tconstant_from_double.c  tconstant_from_int.c  tconstant_from_int64.c  tconstant_from_mpq.reference  tconstant_from_uint64.c  tdecompose_function.c  tdecompose_library_constant.c  tdecompose_library_constant.reference  tdecompose_library_function.c  tdecompose_procedure_function.c  tdenominator.c  tdiff.c  tdiff.reference  tdirtyinfnorm.c  tdirtyinfnorm.reference  (+117 more)
tests-tool/: Makefile.am  check.proto  check001.sollya  check001.sollya.reference  check005.sollya.reference  check009.sollya  check009.sollya.reference  check012.sollya  check012.sollya.reference  check013.sollya  check013.sollya.reference  check014.sollya.reference  check015.sollya  check018.sollya  check018.sollya.reference  check020.sollya  check024.sollya  check024.sollya.reference  check025.sollya  check025.sollya.reference  check027.sollya  check027.sollya.reference  libraryexample.c  memoryleaks.sollya  timecheck.sollya  timecheck.sollya.reference
